--- a/index.html
+++ b/index.html
@@ -35,33 +35,31 @@
   </section>
   <script>
     function fizzbuzz() {
-      let fizz = parseFloat(document.getElementById('fizz').value);
-      let buzz = parseFloat(document.getElementById('buzz').value);
-      let result = document.getElementById('result');
-      console.log(fizz);
-
+      const fizz = document.getElementById('fizz').value;
+      const buzz = document.getElementById('buzz').value;
+      const fizzNumber = parseFloat(fizz);
+      const buzzNumber = parseFloat(buzz);
+      const result = document.getElementById('result');
       while(result.lastChild) {
         result.removeChild(result.lastChild);
       }
-
-      function listAdd(title, i) {
-        let listItem = document.createElement('li');
-        listItem.innerHTML = title + ' ' + i;
+      function listAdd(title, number = '') {
+        const listItem = document.createElement('li');
+        listItem.innerHTML = title + ' ' + number;
         result.appendChild(listItem);
       };
-
-      if(Number.isInteger(fizz) && Number.isInteger(buzz)) {
-        for(i=1; i<100; i++) {
-            if (i%fizz === 0 && i%buzz === 0) {
+      if (!Number.isNaN(fizzNumber) && !Number.isNaN(buzzNumber)) {
+        for(i = 1; i < 100; i++) {
+            if (i % fizz === 0 && i % buzz === 0) {
               listAdd('fizzbuzz', i);
-            } else if (i%fizz === 0){
+            } else if (i % fizz === 0){
               listAdd('fizz', i);
-            } else if (i%buzz === 0){
+            } else if (i % buzz === 0){
               listAdd('buzz', i);
             }
         }
       } else {
-        listAdd('整数ではありません', '');
+        listAdd('整数ではありません');
       }
     };
   </script>
